2007-12-16  Vladimir Prus  <vladimir@codesourcery.com>

	* breakpoint.c (bpstat_have_active_hw_watchpoints):
	Remove
	(bpstat_stop_status): Remove unused variable
	real_breakpoint.
	* breakpoint.h (bpstat_have_active_hw_watchpoints):
	Remove prototype.

2007-12-16  Vladimir Prus  <vladimir@codesourcery.com>

	* target.h (target_pid_or_tid_to_str): Remove.
	* infrun.c (handle_inferior_event):
        Use target_pid_to_str instead of 
	target_pid_or_tid_to_str.
	(normal_stop): Likewise.

2007-12-16  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* dwarf2read.c (dwarf_attr_name): Rename `DW_AT_stride_size' to its
	DWARF3 equivalent `DW_AT_bit_stride'.
	Rename `DW_AT_stride' to its DWARF3 equivalent `DW_AT_byte_stride'.

2007-12-16  Joel Brobecker  <brobecker@adacore.com>

	* mi/mi-main.c: Remove code that was commented out in 1999.

2007-12-16  Joel Brobecker  <brobecker@adacore.com>

	* expression.h (parse_expression_in_context): Delete prototype.
	* parse.c (parse_expression_in_context): Delete.

2007-12-14  Vladimir Prus  <vladimir@codesourcery.com>

	Add support for pending breakpoints in MI.
	* gdb.h (gdb_breakpoint): Add parameter pending.
	* breakpoint.c (gdb_breakpoint): Add parameter pending.
	* mi/mi-cmd-break.c (mi_break_insert): Change
	comment to refer to manual.  Add support for
	the -f flag, for pending breakpoint.

2007-12-14  Vladimir Prus  <vladimir@codesourcery.com>
	
	* breakpoint.c (break_command_really): New, copied
	from break_command_1. New parameters COND_STRING, THREAD
	PARSE_CONDITITION_AND_THREAD and PENDING_BREAK_SUPPORT.
	The previous FLAG parameter split into TEMPFLAG and
	HARDWAREFLAG.
	When PARSE_CONDITION_AND_THREAD is not set, duplicate
	the passed condition string.
	(struct captured_breakpoint_args): Remove
	(do_captured_breakpoint): Remove.
	(break_command_1): Relay to break_command_really.
	(gdb_breakpoint): Relay to break_command_really.
	
2007-12-13  Michael Snyder  <msnyder@specifix.com>
